--- a/index.html
+++ b/index.html
@@ -6,76 +6,78 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://use.fontawesome.com/1fb0eb3889.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <title>Where work happens | Slack</title>
 </head>
 
 <body>
-  <nav class="top-bar">
-   <div class="container">
-     <div class="row flex-space-between">
-      <div class="top-logo"><img src="./images/slack-logo.png" alt="slack_logo"></div>
-      <ul class="menu">
-        <li><a href="#">Why Slack?</a></li>
-        <li><a href="#">Pricing</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Your Workspaces</a></li>
-      </ul>
-      <div class="button_container" id="menu_trigger">
-        <span class="top"></span>
-        <span class="middle"></span>
-        <span class="bottom"></span>
-      </div>
-      </div>
-    </div>
-  </nav>
-  <header class="head-section">
+  <header>
+    <nav class="top-bar">
     <div class="container">
-      <div class="row flex-row-reverse">
-        <div class="col-50">
-          <h1>Where Work Happens</h1>
-          <p>When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.</p>
-          <button class="btn" type="button" name="button">GET STARTED</button>
-          <p>Already using Slack? <a href="#">Sign in</a></p>
+      <div class="row mobile-flex align-center">
+        <div class="top-logo"><img src="./images/slack-logo.png" alt="slack_logo"></div>
+        <ul class="menu" id="menu">
+          <li><a href="#">Why Slack?</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Your Workspaces</a></li>
+        </ul>
+        <div class="button_container" id="menu_trigger">
+          <span class="top"></span>
+          <span class="middle"></span>
+          <span class="bottom"></span>
         </div>
-        <div class="col-50">
-          <img src="./images/home_talking.png" alt="home_work_happening">
         </div>
       </div>
-    </div>
+    </nav>
   </header>
+
   <main class="main-content">
-    <section class="colaboration-section">
+    <section class="banner front-page-section">
+      <div class="container">
+        <div class="row flex-row-reverse">
+          <div class="banner__item">
+            <h1>Where Work Happens</h1>
+            <p>When your team needs to kick off a project, hire a new employee, deploy some code, review a sales contract, finalize next year's budget, measure an A/B test, plan your next office opening, and more, Slack has you covered.</p>
+            <button class="btn" type="button" name="button">GET STARTED</button>
+            <p>Already using Slack? <a href="#">Sign in</a></p>
+          </div>
+          <div class="banner__item">
+            <img src="./images/home_talking.png" alt="home_work_happening">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="colaboration-section front-page-section">
       <div class="container">
         <div class="row flex-center">
           <h2>You´re in good company</h2>
           <p>Millions of people around the world have already made Slack the place where their work happens.</p>
-          <button class="btn btn-stroked" type="button" name="button">DISCOVER WHY</button>
-            <div class="row space-between fig-container">
-              <figure class="item"><img src="./images/airbnb-logo.png" alt=""></figure>
-              <figure class="item"><img src="./images/capital-one-logo.png" alt=""></figure>
-              <figure class="item"><img src="./images/harvard-logo.png" alt=""></figure>
-              <figure class="item"><img src="./images/los-angeles-times-logo.png" alt=""></figure>
-              <figure class="item"><img src="./images/oracle-logo.png" alt=""></figure>
-              <figure class="item"><img src="./images/ticketmaster-logo.png" alt=""></figure>
+          <button class="btn btn--stroked" type="button" name="button">DISCOVER WHY</button>
+            <div class="row space-between mobile-flex fig-container">
+              <figure class="fig-container__item"><img src="./images/airbnb-logo.png" alt=""></figure>
+              <figure class="fig-container__item"><img src="./images/capital-one-logo.png" alt=""></figure>
+              <figure class="fig-container__item"><img src="./images/los-angeles-times-logo.png" alt=""></figure>
+              <figure class="fig-container__item"><img src="./images/oracle-logo.png" alt=""></figure>
+              <figure class="fig-container__item"><img src="./images/ticketmaster-logo.png" alt=""></figure>
             </div>
           </div>
         </div>
     </section>
-    <div class="try-it-section">
+    <div class="try-it-section front-page-section">
       <div class="container">
         <div class="row flex-space-between align-center">
-          <div class="col-50">
-          <h2>Try it for free</h2>
-          <p>Already using Slack? <a href="">Sign in</a></p>
-        </div>
-        <div class="col-20">
-          <button class="btn" type="button" name="button">GET STARTED</button>
-        </div>
+          <div class="try-it-section__item">
+            <h2>Try it for free</h2>
+            <p>Already using Slack? <a href="">Sign in</a></p>
+          </div>
+          <div class="try-it-section__btn">
+            <button class="btn" type="button" name="button">GET STARTED</button>
+          </div>
         </div>
       </div>
-    </div>  
+    </div>
   </main>
   <footer class="main-footer">
     <div class="container useful-links">
@@ -124,9 +126,10 @@
           <li><a href="#">Contact Us</a></li>
         </ul>
         <div class="footer-icon-section">
-          <img src="./images/us-flag.png" alt="">
-          <span>English (US)</span>
-          <i class="fa fa-chevron-down" aria-hidden="true"></i>
+          <div class="lang-items">
+            <span>English (US)</span>
+            <i class="fa fa-chevron-down" aria-hidden="true"></i>
+          </div>
           <i class="fa fa-twitter" aria-hidden="true"></i>
           <i class="fa fa-facebook" aria-hidden="true"></i>
           <i class="fa fa-youtube-play" aria-hidden="true"></i>
@@ -135,6 +138,8 @@
     </div>
   </div>
   </footer>
+
+  <script src="javascripts/main.js"></script>
 </body>
 
 </html>
